# src/routes/player.router.ts
@@ -1,14 +1,0 @@
-import express, {Request} from "express";
-import PlayerController from './../controllers/player.controller';
-const router = express.Router();
-
-
-router.get("/", async (_req, res) => {
-  const controller = new PlayerController();
-  const response = await controller.getStats()
-  return res.send(response)
-});
-
-
-
-export default router;
